--- a/src/style.styl
+++ b/src/style.styl
@@ -17,4 +17,25 @@
 .trace-item-layer{
 border: 1px dashed #f00;
 display: inline-block;
+position: relative;
+.list{
+    position: absolute;
+    left: 0;top:0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    i{
+        position: absolute;
+        display: block;
+        width: 20px;
+        height: 20px;
+        border:1px solid #c00;
+        border-radius: 10px;
+        background: rgba(255,0,0,.2);
+        
+    }
+}
+img{z-index :0}
+.list{}
+
 }
